--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 font-family: Arial, sans-serif;
                 background-image:url("thumb-1920-375348\ 7as.png");
                 padding: 20px;
+                overflow: hidden;
             }
             main {
                 display: flex;
@@ -67,9 +68,11 @@
                         <div class="rank_description">
                             <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjz-_OP3byMAxWhKdQBHZx4HhcYABAAGgJvYQ&co=1&gclid=CjwKCAjw47i_BhBTEiwAaJfPpm7v0RqT-gt6H8PeLTDPvmQtjAwduXx70FCzSASYpVzFybSRte0cORoC6XAQAvD_BwE&ohost=www.google.com&cid=CAESVuD2R1Iabg3OurZMGHyMNoytxKFp6RIgX2uV2Dv9L_ZFy15QXRS2UyIOCtRcaVFQrq2SUFho03mlCYpaL3o8PD-1RX5AX0q_Efnr1Gnu_L-Ta0wGQYYB&sig=AOD64_0GNZfU3G7eemShg2YEmbSOjNGPYw&q&adurl&ved=2ahUKEwj22-6P3byMAxWTMtAFHVTyG3gQ0Qx6BAgREAQ">10 Ways To Save The Environment</a>
                             <a href="https://duklack.github.io/index.html">Benfit of Vegan </a>
-                            <a href="https://music.youtube.com/watch?v=2eNEQ0cQtkI&list=RDAMVM2eNEQ0cQtkI">10 Ways To Save The Environment</a>
+                            <a href="https://butterfly-conservation.org/news-and-blog/10-easy-ways-you-can-help-our-environment">10 Ways To Save The Environment</a>
                             <a href="https://www.americanrivers.org/rivers/discover-your-river/top-10-ways-for-you-to-save-water-at-home/?gad_source=1&gclid=CjwKCAjw47i_BhBTEiwAaJfPpka1DWn1O1S55hZzUfRHwJtybKpBMQhQ1-WWSoQX5tQyT8EbdsCxUxoC8JUQAvD_BwE">10 Ways to Save Water at Home</a>
-                            
+                            <a href="https://www.earthday.org/10-simple-ways-to-save-the-environment/">10 Simple Ways to Save the Environment</a>
+                            <a href="https://www.un.org/en/actnow/ten-actions/">Action on the Plannet</a>   
+                            <a href="https://www.wwf.org.uk/thingsyoucando">10 things you can do to help save our planet</a>
                             <a href="https://oceanservice.noaa.gov/ocean/earthday.html">Protecting Our Planet Starts with You</a>
                             <a href="https://www.greenmountainenergy.com/en/why-renewable-energy/protect-the-environment">12 Ways You Can Protect the Environment</a>
                             <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjz-_OP3byMAxWhKdQBHZx4HhcYABAAGgJvYQ&co=1&gclid=CjwKCAjw47i_BhBTEiwAaJfPpm7v0RqT-gt6H8PeLTDPvmQtjAwduXx70FCzSASYpVzFybSRte0cORoC6XAQAvD_BwE&ohost=www.google.com&cid=CAESVuD2R1Iabg3OurZMGHyMNoytxKFp6RIgX2uV2Dv9L_ZFy15QXRS2UyIOCtRcaVFQrq2SUFho03mlCYpaL3o8PD-1RX5AX0q_Efnr1Gnu_L-Ta0wGQYYB&sig=AOD64_0GNZfU3G7eemShg2YEmbSOjNGPYw&q&adurl&ved=2ahUKEwj22-6P3byMAxWTMtAFHVTyG3gQ0Qx6BAgREAQ">How to save the Environment</a>
